end of module 6

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 
   <main class="flex-row justify-space-between">
     <div class="col-12 col-md-4">
-
       <div class="card">
         <h3 class="card-header text-uppercase">Search By User</h3>
         <form id="user-form" class="card-body">
@@ -29,6 +28,16 @@
           <input name="username" id="username" type="text" autofocus="true" class="form-input" />
           <button type="submit" class="btn">Get User</button>
         </form>
+      </div>
+      <div class="col-12 col-md-4">
+        <div class="card">
+          <h3 class="card-header text-uppercase">Search By Topic</h3>
+          <div id="language-buttons" class="card-body">
+            <button class="btn" data-language="javascript">JavaScript</button>
+            <button class="btn" data-language="html">HTML</button>
+            <button class="btn" data-language="css">CSS</button>
+          </div>
+        </div>
       </div>
     </div>
 
@@ -39,6 +48,8 @@
       </div>
     </div>
   </main>
+  
+
 
   <script src="./assets/js/homepage.js"></script>
 </body>
